force-app/main/default/objects/Retailer_Proximity__c/Retailer_Proximity__c.object-meta.xml
<CustomObject>
    <label>Retailer Proximity</label>
    <nameField>
        <label>Retailer Proximity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retailers Proximity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>