force-app/main/default/objects/Retailer_Proximity__c/fields/NextGenLast_Modified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>NextGenLast_Modified_Date_Time__c</fullName>
    <label>NextGenLast Modified Date/Time</label>
    <type>DateTime</type>
</CustomField>