force-app/main/default/objects/Retailer_Proximity__c/fields/Proximity__c.field-meta.xml
<CustomField>
    <fullName>Proximity__c</fullName>
    <label>Proximity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>