force-app/main/default/objects/Retailer_Proximity__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <label>School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Retailers Proximity</relationshipLabel>
    <relationshipName>Retailers_Proximity</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>